--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
         "eslint-plugin-jsx-a11y": "^4.0.0",
         "eslint-plugin-react": "^6.9.0",
         "extract-text-webpack-plugin": "^2.1.0",
+        "file-loader": "^0.11.1",
         "html-webpack-plugin": "^2.28.0",
+        "image-webpack-loader": "^3.3.1",
         "node-sass": "^4.5.0",
         "postcss-cssnext": "^2.10.0",
         "postcss-loader": "^1.2.2",
