--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "mobx-react-devtools": "^4.2.13",
         "react": "^15.4.2",
         "react-dom": "^15.4.2",
+        "react-number-format": "^2.0.0-alpha2",
         "react-router": "^3.0.2",
         "whatwg-fetch": "^2.0.2"
     },
